test/spec_vectors/simd_i16x8_arith/fail/module_7.wat
(module (func $i16x8.add-arg-empty (result v128) (i16x8.add)))